@@ -1,5 +1,9 @@
 2008-12-14  Sam Steingold  <sds@gnu.org>
 
+	* stream.d: replace SAME_HANDLE_P_OUT with a general DEBUG_OUT
+
+2008-12-14  Sam Steingold  <sds@gnu.org>
+
 	* spvw_debug.d (bt_out): fflush out at the end
 
 2008-12-14  Sam Steingold  <sds@gnu.org>
